# gcwallet_backend

./: .env  Cargo.toml  Diagram bez názvu.drawio  help.md
src/: main.rs
src/controllers/: card_controller.rs  gym_controller.rs  mod.rs  user_controller.rs
src/model/: model.rs
