[package]
name = "gcwallet_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
actix-web = "4"
actix = "0.13.0"
actix-rt = "2.7.0"
chrono = "0.4.23"
mongodb = "2"
bcrypt = "0.13.0"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"