[package]
name = "gcwallet_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0

[dependencies]
actix-web = "4.3.0"
futures = "0.3"
actix = "0.13.0"
actix-rt = "2.8.0"
chrono = "0.4.23"
mongodb = "2.3.1"
bcrypt = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
actix-cors = "0.6.4"